trunk/Archive2/59/3bdf8564a65362/output
main.cpp:13:23: error: designated initializers are a C99 feature [-Werror,-Wc99-extensions]
   struct foo bar = { .a = 1, .b = 2 };
                      ^~~~~~
main.cpp:13:31: error: designated initializers are a C99 feature [-Werror,-Wc99-extensions]
   struct foo bar = { .a = 1, .b = 2 };
                              ^~~~~~
2 errors generated.
